JumpScript/tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamespaceBindingWithExport.errors.txt
tests/cases/compiler/client.jump(1,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.jump(1,15): error TS1192: Module '"tests/cases/compiler/server"' has no default export.


==== tests/cases/compiler/server.jump (0 errors) ====
    export var a = 10;
    
==== tests/cases/compiler/client.jump (2 errors) ====
    export import defaultBinding, * as nameSpaceBinding  from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
                  ~~~~~~~~~~~~~~
!!! error TS1192: Module '"tests/cases/compiler/server"' has no default export.
    export var x: number = nameSpaceBinding.a;